--- a/style/style.css
+++ b/style/style.css
@@ -66,6 +66,7 @@ input:focus{
 	text-decoration: none;
 	color: white;
 	transform: scale(1.125, 1.125);
+
 	background: rgba(0,255,0,0.4);
 
 }
@@ -75,4 +76,17 @@ input:focus{
    font-size: 24px;
    text-align: center;
 
+}
+
+#login-button{
+	background: #fff;
+	border: 1px #fff;
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+	color: green;
+	left: 50%;
+	margin-left: -15px;
+	position: absolute;
+	top:300px;
 }
